--- a/index.html
+++ b/index.html
@@ -1,11 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./style/index.css" />
+		<title>Document</title>
+	</head>
+	<body>
+		<div class="flex container">
+			<header class="flex">
+				<h2 class="header-logo">Edgar Trevino</h2>
+				<nav class="flex">
+					<a href="/index.html">Home</a>
+					<a href="/about.html">About</a>
+					<a href="/contact.html">Contact</a>
+					<a href="/projects.html">Projects</a>
+				</nav>
+			</header>
+			<section class="hero-section-container flex">
+				<section class="hero-section flex">
+					<div class="hero-image">
+						<button>My Projects</button>
+					</div>
+					<!-- <img
+						class="hero-image"
+						src="https://picsum.photos/id/48/300/200"
+						alt="Apple laptop an a wooden desk"
+					/> -->
+				</section>
+			</section>
+			<section class="gallery-section-container flex">
+				<div class="gallery flex">
+					<div class="gallery-card">
+						<div class="gallery-image flex">
+							<div class="image-1 image"></div>
+						</div>
+						<h3 class="gallery-image-title">Project 1</h3>
+					</div>
+					<div class="gallery-card">
+						<div class="gallery-image"><div class="image-2 image"></div></div>
+						<h3 class="gallery-image-title">Project 2</h3>
+					</div>
+					<div class="gallery-card">
+						<div class="gallery-image"><div class="image-3 image"></div></div>
+						<h3 class="gallery-image-title">Project 3</h3>
+					</div>
+					<div class="gallery-card">
+						<div class="gallery-image"><div class="image-4 image"></div></div>
+						<h3 class="gallery-image-title">Project 4</h3>
+					</div>
+					<div class="gallery-card">
+						<div class="gallery-image"><div class="image-5 image"></div></div>
+						<h3 class="gallery-image-title">Project 5</h3>
+					</div>
+					<div class="gallery-card">
+						<div class="gallery-image"><div class="image-6 image"></div></div>
+						<h3 class="gallery-image-title">Project 6</h3>
+					</div>
+				</div>
+			</section>
+			<footer class="flex"></footer>
+		</div>
+	</body>
 </html>
