Adds most styles.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,18 @@
 			<header class="flex">
 				<h2 class="header-logo">Edgar Trevino</h2>
 				<nav class="flex">
-					<a href="/index.html">Home</a>
-					<a href="/about.html">About</a>
-					<a href="/contact.html">Contact</a>
-					<a href="/projects.html">Projects</a>
+					<div class="nav-tab home">
+						<a href="/index.html">Home</a>
+					</div>
+					<div class="nav-tab">
+						<a href="/about.html">About</a>
+					</div>
+					<div class="nav-tab">
+						<a href="/contact.html">Contact</a>
+					</div>
+					<div class="nav-tab">
+						<a href="/projects.html">Projects</a>
+					</div>
 				</nav>
 			</header>
 			<section class="hero-section-container flex">
@@ -38,28 +46,40 @@
 						<h3 class="gallery-image-title">Project 1</h3>
 					</div>
 					<div class="gallery-card">
-						<div class="gallery-image"><div class="image-2 image"></div></div>
+						<div class="gallery-image flex">
+							<div class="image-2 image"></div>
+						</div>
 						<h3 class="gallery-image-title">Project 2</h3>
 					</div>
 					<div class="gallery-card">
-						<div class="gallery-image"><div class="image-3 image"></div></div>
+						<div class="gallery-image flex">
+							<div class="image-3 image"></div>
+						</div>
 						<h3 class="gallery-image-title">Project 3</h3>
 					</div>
 					<div class="gallery-card">
-						<div class="gallery-image"><div class="image-4 image"></div></div>
+						<div class="gallery-image flex">
+							<div class="image-4 image"></div>
+						</div>
 						<h3 class="gallery-image-title">Project 4</h3>
 					</div>
 					<div class="gallery-card">
-						<div class="gallery-image"><div class="image-5 image"></div></div>
+						<div class="gallery-image flex">
+							<div class="image-5 image"></div>
+						</div>
 						<h3 class="gallery-image-title">Project 5</h3>
 					</div>
 					<div class="gallery-card">
-						<div class="gallery-image"><div class="image-6 image"></div></div>
+						<div class="gallery-image flex">
+							<div class="image-6 image"></div>
+						</div>
 						<h3 class="gallery-image-title">Project 6</h3>
 					</div>
 				</div>
 			</section>
-			<footer class="flex"></footer>
+			<footer class="flex">
+				<button>Contact Me</button>
+			</footer>
 		</div>
 	</body>
 </html>
