--- a/index.html
+++ b/index.html
@@ -28,13 +28,10 @@
 			<section class="hero-section-container flex">
 				<section class="hero-section flex">
 					<div class="hero-image">
-						<button>My Projects</button>
+						<a href="/projects.html">
+							<button>My Projects</button>
+						</a>
 					</div>
-					<!-- <img
-						class="hero-image"
-						src="https://picsum.photos/id/48/300/200"
-						alt="Apple laptop an a wooden desk"
-					/> -->
 				</section>
 			</section>
 			<section class="gallery-section-container flex">
