Adds some animations for the tabs and hero button.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
 				</div>
 			</section>
 			<footer class="flex">
-				<button>Contact Me</button>
+				<a href="/contact.html">
+					<button>Contact Me</button>
+				</a>
 			</footer>
 		</div>
 	</body>
