Adds Social media links in the footer

--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+		/>
+		<!-- <link
+			rel="stylesheet"
+			href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+			integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+			crossorigin="anonymous"
+		/> -->
 		<link rel="stylesheet" href="./style/index.css" />
 		<title>Document</title>
 	</head>
@@ -78,6 +88,17 @@
 				<a href="/contact.html">
 					<button>Contact Me</button>
 				</a>
+				<div class="social-media-footer">
+					<div class="grow-container-footer">
+						<a href="#" class="fa fa-linkedin"></a>
+					</div>
+					<div class="grow-container-footer">
+						<a href="https://github.com/eet349/" class="fa fa-github"></a>
+					</div>
+					<div class="grow-container-footer">
+						<a href="#" class="fa fa-instagram"></a>
+					</div>
+				</div>
 			</footer>
 		</div>
 	</body>
