--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 		/>
 		<link rel="stylesheet" href="./style/index.css" />
-		<title>Document</title>
+		<title>Edgar's Portfolio</title>
 	</head>
 	<body>
 		<div class="flex container">
@@ -31,7 +31,7 @@
 			</header>
 			<section class="hero-section-container flex">
 				<section class="hero-section flex">
-					<div class="hero-image">
+					<div class="hero-image" alt="Apple laptop with code on the screen">
 						<a href="/projects.html">
 							<button>My Projects</button>
 						</a>
@@ -40,39 +40,45 @@
 			</section>
 			<section class="gallery-section-container flex">
 				<div class="gallery flex">
-					<div class="gallery-card">
+					<div class="gallery-card flex">
 						<div class="gallery-image flex">
-							<div class="image-1 image"></div>
+							<div
+								class="image-1 image"
+								alt="Boxed water is better carton"
+							></div>
 						</div>
 						<h3 class="gallery-image-title">Project 1</h3>
 					</div>
 					<div class="gallery-card">
 						<div class="gallery-image flex">
-							<div class="image-2 image"></div>
+							<div class="image-2 image" alt="Blue geometric shapes"></div>
 						</div>
 						<h3 class="gallery-image-title">Project 2</h3>
 					</div>
 					<div class="gallery-card">
 						<div class="gallery-image flex">
-							<div class="image-3 image"></div>
+							<div
+								class="image-3 image"
+								alt="Close up of a grid of icons"
+							></div>
 						</div>
 						<h3 class="gallery-image-title">Project 3</h3>
 					</div>
 					<div class="gallery-card">
 						<div class="gallery-image flex">
-							<div class="image-4 image"></div>
+							<div class="image-4 image" alt="Collage of art"></div>
 						</div>
 						<h3 class="gallery-image-title">Project 4</h3>
 					</div>
 					<div class="gallery-card">
 						<div class="gallery-image flex">
-							<div class="image-5 image"></div>
+							<div class="image-5 image" alt="Hand-drawn website designs"></div>
 						</div>
 						<h3 class="gallery-image-title">Project 5</h3>
 					</div>
 					<div class="gallery-card">
 						<div class="gallery-image flex">
-							<div class="image-6 image"></div>
+							<div class="image-6 image" alt="White robot looking up"></div>
 						</div>
 						<h3 class="gallery-image-title">Project 6</h3>
 					</div>
